IX - Set publisher name as InMobi
1) IX - Set publisher name as InMobi 2) Remove Usages of Literals=Ritwik-Kumar